[gd_scene load_steps=4 format=3 uid="uid://cqasgq6fl6hlq"]

[ext_resource type="Script" path="res://Scenes/Abilities/VoidBolt.gd" id="1_nu10g"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ydex8"]
radius = 20.0998

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5prrf"]
bg_color = Color(0.262745, 0, 0.298039, 1)
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[node name="VoidBolt" type="Area2D"]
position = Vector2(0, -11)
scale = Vector2(0.4, 0.4)
collision_layer = 32
collision_mask = 16
script = ExtResource("1_nu10g")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_ydex8")

[node name="Panel" type="Panel" parent="."]
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
theme_override_styles/panel = SubResource("StyleBoxFlat_5prrf")

[node name="SpellTimeout" type="Timer" parent="."]
autostart = true

[node name="VisibleOnScreenEnabler2D" type="VisibleOnScreenEnabler2D" parent="."]

[connection signal="area_entered" from="." to="." method="EnemyHit"]
[connection signal="timeout" from="SpellTimeout" to="." method="VoidBoltTimeout"]
[connection signal="screen_exited" from="VisibleOnScreenEnabler2D" to="." method="VoidBoltLeftScreen"]
